# food-delivery-app

./: .env.example  .gitignore  README.md  create_superuser.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  project.sh  restart_backend.sh  restart_frontend.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  entrypoint-dev.sh  entrypoint.sh  flower  nginx.conf  pyproject.toml  requirements.txt
backend/backend/: __init__.py  asgi.py  celery.py  middleware.py  settings.py  urls.py
backend/backend/middleware/: selective_cache.py
backend/basket/: models.py  serializers.py  urls.py  views.py
backend/basket/migrations/: 0001_initial.py
backend/orders/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/orders/management/commands/: run_celery.py
backend/orders/migrations/: 0001_initial.py  0002_order_address_order_notes_order_phone.py  0002_periodic_tasks.py
backend/orders/templates/email/: order_confirmation.html  order_success.html
backend/products/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/products/management/commands/: populate_products.py
backend/products/migrations/: 0001_initial.py  0002_alter_product_options_product_calories_and_more.py
backend/users/: admin.py  apps.py  email.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_user_address_user_avatar_and_more.py
backend/users/templates/email/: activation_email.html  email_reset_email.html  password_changed_email.html  password_reset_email.html  welcome_email.html
backend/utils/: cache.py  tasks.py
backend/utils/migrations/: 0001_create_clear_sessions_task.py
(+65 files in other folders)
