[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["zart227 <zart227@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
djangorestframework = "^3.15.2"
django-environ = "^0.11.2"
pillow = "^11.0.0"
psycopg2-binary = "^2.9.10"
django-allauth = "^65.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-django = "^4.9.0"
black = "^24.10.0"
flake8 = "^7.1.1"
djlint = "^1.36.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
